--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="10K549" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <deployment defaultVersion="1280" identifier="iOS"/>
+        <development defaultVersion="4200" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller - Heroes-->
         <scene sceneID="14">
             <objects>
                 <navigationController id="3" sceneMemberID="viewController">
@@ -21,7 +21,6 @@
             </objects>
             <point key="canvasLocation" x="-70" y="-1510"/>
         </scene>
-        <!--Detail View Controller - Detail-->
         <scene sceneID="16">
             <objects>
                 <viewController storyboardIdentifier="" title="Detail" id="4" customClass="DetailViewController" sceneMemberID="viewController">
@@ -40,7 +39,6 @@
                             <segments>
                                 <segment title="Information"/>
                                 <segment title="Abilities"/>
-                                <segment title="Guides"/>
                             </segments>
                             <connections>
                                 <action selector="segmentChanged:" destination="4" eventType="valueChanged" id="tm8-gd-qbP"/>
@@ -66,31 +64,6 @@
             </objects>
             <point key="canvasLocation" x="516" y="278"/>
         </scene>
-        <!--Builds View Controller-->
-        <scene sceneID="P4J-sb-kcr">
-            <objects>
-                <viewController storyboardIdentifier="BuildsVC" id="uKR-zt-jbU" customClass="BuildsViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="x1K-kQ-SJ3">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="BUILDS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Z8a-Ax-Ngr">
-                                <rect key="frame" x="256" y="293" width="62" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.13725490196078433" green="0.14117647058823529" blue="0.14509803921568626" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0au-2A-qN7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1312" y="50"/>
-        </scene>
-        <!--Split View Controller-->
         <scene sceneID="18">
             <objects>
                 <splitViewController id="5" sceneMemberID="viewController">
@@ -106,7 +79,6 @@
             </objects>
             <point key="canvasLocation" x="-687" y="-630"/>
         </scene>
-        <!--Master View Controller - Master-->
         <scene sceneID="24">
             <objects>
                 <tableViewController storyboardIdentifier="" title="Master" clearsSelectionOnViewWillAppear="NO" id="19" customClass="MasterViewController" sceneMemberID="viewController">
@@ -215,7 +187,6 @@
             </objects>
             <point key="canvasLocation" x="375" y="-1510"/>
         </scene>
-        <!--Items Table View Controller - Items-->
         <scene sceneID="NR0-Ce-uLU">
             <objects>
                 <tableViewController id="Khv-Ek-cUs" customClass="ItemsTableViewController" sceneMemberID="viewController">
@@ -276,10 +247,9 @@
             </objects>
             <point key="canvasLocation" x="-126" y="-2743"/>
         </scene>
-        <!--Navigation Controller-->
         <scene sceneID="pOm-G0-DkK">
             <objects>
-                <navigationController storyboardIdentifier="ItemNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="XDe-kN-O2a" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ItemNav" definesPresentationContext="YES" id="XDe-kN-O2a" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="QCM-GY-Fo1">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -291,7 +261,6 @@
             </objects>
             <point key="canvasLocation" x="504" y="-2935"/>
         </scene>
-        <!--Items Detail View Controller-->
         <scene sceneID="rLH-bi-yJo">
             <objects>
                 <viewController id="hFQ-YJ-Fl8" customClass="ItemsDetailViewController" sceneMemberID="viewController">
@@ -426,7 +395,6 @@
             </objects>
             <point key="canvasLocation" x="1504" y="-2904"/>
         </scene>
-        <!--Navigation Controller - Items-->
         <scene sceneID="1hf-xI-Qg8">
             <objects>
                 <navigationController storyboardIdentifier="" definesPresentationContext="YES" id="I4a-s5-ntI" sceneMemberID="viewController">
@@ -442,7 +410,6 @@
             </objects>
             <point key="canvasLocation" x="-562" y="-2743"/>
         </scene>
-        <!--Tab Bar Controller-->
         <scene sceneID="nJF-Xu-zqg">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="iGa-z1-DcB" sceneMemberID="viewController">
@@ -461,7 +428,6 @@
             </objects>
             <point key="canvasLocation" x="-544" y="-1526"/>
         </scene>
-        <!--Navigation Controller-->
         <scene sceneID="50">
             <objects>
                 <navigationController id="42" sceneMemberID="viewController">
@@ -476,10 +442,9 @@
             </objects>
             <point key="canvasLocation" x="-276" y="278"/>
         </scene>
-        <!--Guides View Controller-->
         <scene sceneID="vPr-Hd-7Nu">
             <objects>
-                <tableViewController storyboardIdentifier="GuidesVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="TXn-GJ-XaX" customClass="GuidesViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="GuidesVC" id="TXn-GJ-XaX" customClass="GuidesViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="BmI-Jt-GKa">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -503,9 +468,8 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3nE-ic-xgH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-987" y="1432"/>
+            <point key="canvasLocation" x="-1259" y="1263"/>
         </scene>
-        <!--Information View Controller-->
         <scene sceneID="lIw-Jv-2kd">
             <objects>
                 <viewController storyboardIdentifier="InformationVC" id="7V3-sk-vAF" customClass="InformationViewController" sceneMemberID="viewController">
@@ -728,10 +692,9 @@
             </objects>
             <point key="canvasLocation" x="-369" y="1283"/>
         </scene>
-        <!--Abilities View Controller-->
         <scene sceneID="eXJ-NH-WOb">
             <objects>
-                <viewController storyboardIdentifier="AbilityVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="T6e-Ig-B8I" customClass="AbilitiesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AbilityVC" id="T6e-Ig-B8I" customClass="AbilitiesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R7u-S7-Tt6">
                         <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -806,7 +769,6 @@
             </objects>
             <point key="canvasLocation" x="575" y="1263"/>
         </scene>
-        <!--Ability Detail View Controller-->
         <scene sceneID="hbI-ge-RXI">
             <objects>
                 <viewController id="j3C-pY-Kim" customClass="AbilityDetailViewController" sceneMemberID="viewController">
